# maverick

./: .gitignore  .test_durations  AGENTS.md  BRANCH_STEP_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEBUG.md  FUTURE.md  GEMINI.md  LICENSE  MIGRATION.md  Makefile  OPPORTUNITIES.md  README.md  REGISTRATION.md  VALIDATION_REPORT.md  coverage.xml  maverick.yaml  package-lock.json  package.json  prototype.py  pyproject.toml  results.xml  ruff.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: debug-tui.md
.claude/scratchpads/: architecture-pull-work-push.md  init-to-land-e2e-prompt.md  opencode-substrate-migration.md  opencode-substrate-spike.md
.codex/: config.toml  version.json
.devcontainer/: README.md  devcontainer.json
.gemini/: settings.json
.github/: copilot-instructions.md
.github/ISSUES/: maverick-init.md
.github/agents/: copilot-instructions.md
.github/prompts/: code-review.prompt.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  test.yml
.specify/memory/: constitution.md  fly-beads-design-brief.md  workspace-isolation-design-brief.md
.specify/templates/: agent-file-template.md
docs/: AGENT-MCP.md  AGENTS.md  BURR.md  FIRST_RUN_FIXES.md  OPPORTUNITIES.md  PATTERNS.md  README.md  REFUEL_ISSUES.md  agent-prompts.md  architecture.md  cli-output-rules.md  curriculum.md  dsl-consolidation-strategy.md  expression-grammar.md  index.html  migrating-from-decorator-dsl.md  migration-implementation-plan.md  migration-phase-0-report.md  migration-phase-0-spike.md  migration-phase-0b-report.md  migration-recommendation.md  prd-substrate-memory.md  prd-xoscar-migration.md  preflight.md
docs/sketches/: unified-review-fix.md
docs/slidev/: package-lock.json  package.json  slides.md  uno.config.ts
examples/: README.md  agent_output_demo.py  test_spinner.py
examples/containerized-validation/: README.md  docker-compose.yml  invoke_workflow.py
plugins/maverick/: README.md
plugins/tech-debt/: README.md
scripts/: XOSCAR_POC_NOTES.md  inspect_acp_config.py  poc_xoscar_mcp.py  probe-claude-code-runtime.py  probe-codex-runtime.py  probe-copilot-runtime.py  probe-opencode-zen-runtime.py  spike-openai-agents-sdk-litellm.py  spike-openai-agents-sdk-litellm.results.json  spike-pydantic-ai.py  spike-pydantic-ai.results.json  spike-v3-redo.py  spike-v3-redo.results.json
specs-completed/001-automate-phase-tasks/: quickstart.md  research.md  spec.md  tasks.md
specs-completed/001-automate-review-fix/: research.md  spec.md  tasks.md
specs-completed/001-cli-prereq-check/: data-model.md  quickstart.md
specs-completed/001-multi-task-orchestration/: plan.md  quickstart.md  research.md  spec.md
specs-completed/001-pr-ci-automation/: plan.md  quickstart.md  tasks.md
specs-completed/001-task-branch-switch/: plan.md  spec.md
specs-completed/001-workflow-params-repo-check/: data-model.md  plan.md  quickstart.md  research.md
specs/001-automate-phase-tasks/: data-model.md  plan.md  quickstart.md
specs/001-automate-review-fix/: data-model.md  plan.md  quickstart.md  tasks.md
specs/001-cli-prereq-check/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-docker-compose-runner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-maverick-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-maverick-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-task-orchestration/: data-model.md  quickstart.md  tasks.md
specs/001-pr-ci-automation/: data-model.md  plan.md  research.md  spec.md
specs/001-task-branch-switch/: data-model.md  quickstart.md  research.md  tasks.md
specs/001-workflow-params-repo-check/: quickstart.md  spec.md  tasks.md
specs/002-base-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-code-reviewer-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-implementer-issue-fixer-agents/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-github-mcp-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-utility-mcp-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-safety-hooks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-validation-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-fly-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-refuel-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-tui-layout-theming/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-workflow-widgets/: data-model.md  implementation-notes-agent-output.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-tui-interactive-screens/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-cli-entry-point/: PHASE9_COMPLETION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-testing-infrastructure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-git-operations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-subprocess-runners/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-context-builder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-generator-agents/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-workflow-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-agent-tool-permissions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: hooks.json  settings.json  workflow.mjs
test/: core.test.mjs  markdown.test.mjs
tests/: __init__.py  conftest.py  test_github_fixtures.py
(+1678 files in other folders)
