[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maverick"
version = "0.1.0"
description = "AI-powered development workflow orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Maverick Contributors" }
]
keywords = ["ai", "automation", "workflow", "cli", "tui", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "aiofiles>=23.0.0,<25",
    "aiohttp>=3.9.0,<4",
    "aiolimiter>=1.2,<2",
    "anyio>=4.0,<5",
    "atomicwrites>=1.4,<2",
    "claude-agent-sdk>=0.1.0",
    "click>=8.1.0,<9",
    "detect-secrets>=1.4,<2",
    "gitpython>=3.1,<4",
    "jinja2>=3.1.0,<4",
    "lark>=1.2,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "pygithub>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "structlog>=24.1,<26",
    "tenacity>=8.2,<10",
    "textual>=0.40.0,<1",
    "tiktoken>=0.8,<1",
    "unidiff>=0.7,<1",
]

[project.scripts]
maverick = "maverick.main:cli"

[dependency-groups]
test = [
    "pytest>=8.2.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=4.0.0,<6",
    "pytest-timeout>=2.0.0,<3",
]
lint = [
    "ruff>=0.1.0,<1",
    "mypy>=1.0.0,<2",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    "types-aiofiles>=25.1.0.20251011",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/maverick"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports are OK in __init__.py (re-exports)
"tests/**/*.py" = [
    "B017",   # pytest.raises without match is acceptable in tests
    "N806",   # Non-lowercase variables OK for mocks (e.g., MockClass)
    "SIM117", # Nested with statements OK in test setup
    "B023",   # Function uses loop variable - acceptable in test factories
]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "unidiff.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=maverick",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--timeout=30",
]
markers = [
    "slow: marks tests as slow (>5s execution time)",
    "integration: marks tests requiring external services",
    "tui: marks TUI-specific tests requiring Textual pilot",
    "benchmark: marks performance benchmark tests",
    "e2e: marks end-to-end tests (slow, require MCP TUI driver or full app)",
    "visual: marks visual regression tests with snapshot comparison",
    "performance: marks performance benchmark tests for response times",
    "accessibility: marks accessibility compliance tests (keyboard nav, focus)",
]
timeout = 30  # 30-second default timeout for async tests (FR-026)

[tool.coverage.run]
source = ["src/maverick"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
