[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maverick-cli"
version = "0.2.0.dev4"
description = "AI-powered development workflow orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Maverick Contributors" }
]
keywords = ["ai", "automation", "workflow", "cli", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "aiofiles>=23.0.0,<25",
    "aiohttp>=3.9.0,<4",
    "aiolimiter>=1.2,<2",
    "anyio>=4.0,<5",
    "atomicwrites>=1.4,<2",
    "click>=8.1.0,<9",
    "detect-secrets>=1.4,<2",
    "gitpython>=3.1,<4",
    "jinja2>=3.1.0,<4",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "pygithub>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "structlog>=24.1,<26",
    "tenacity>=8.2,<10",
    "rank-bm25>=0.2.2,<1",
    "rich>=13.0,<14",
    "tiktoken>=0.8,<1",
    "unidiff>=0.7,<1",
    "agent-client-protocol>=0.8.1,<1",
    "mcp>=1.27.0",
    "thespian>=4.0.1",
]

[project.urls]
Homepage = "https://github.com/get2knowio/maverick"
Repository = "https://github.com/get2knowio/maverick"
Issues = "https://github.com/get2knowio/maverick/issues"

[project.scripts]
maverick-cli = "maverick.main:cli"
maverick = "maverick.main:cli"

[dependency-groups]
test = [
    "pytest>=8.2.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=4.0.0,<6",
    "pytest-split>=0.10.0,<1",
    "pytest-timeout>=2.0.0,<3",
    "pytest-xdist>=3.5.0,<4",
]
lint = [
    "ruff>=0.1.0,<1",
    "mypy>=1.0.0,<2",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    "types-aiofiles>=25.1.0.20251011",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maverick"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "SIM102", # Nested if statements — sometimes clearer than combined
    "SIM105", # contextlib.suppress — try/except/pass is more explicit in actor cleanup
    "SIM108", # Ternary operator — multiline if/else is sometimes clearer
    "N806",   # UPPERCASE locals for constants (THESPIAN_PORT, MAX_NUDGES)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports are OK in __init__.py (re-exports)
"src/maverick/actors/*.py" = [
    "N802",   # receiveMessage is Thespian's required method name
    "E501",   # Long lines in actor debug prints are acceptable
]
"tests/**/*.py" = [
    "B017",   # pytest.raises without match is acceptable in tests
    "N806",   # Non-lowercase variables OK for mocks (e.g., MockClass)
    "SIM117", # Nested with statements OK in test setup
    "B023",   # Function uses loop variable - acceptable in test factories
]

[tool.mypy]
strict = false
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
check_untyped_defs = false
ignore_missing_imports = true
strict_equality = true

[[tool.mypy.overrides]]
module = "unidiff.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Legacy tool modules using @tool decorator from claude_agent_sdk (removed in T051).
# The decorator is typed via _sdk_stubs but Any-typed SDK import causes
# untyped-decorator warnings on the decorated functions. Disable for these modules.
module = [
    "maverick.tools.notification",
    "maverick.tools.validation",
    "maverick.tools.git.tools.branch",
    "maverick.tools.git.tools.commit",
    "maverick.tools.git.tools.diff",
    "maverick.tools.git.tools.push",
    "maverick.tools.github.tools.diffs",
    "maverick.tools.github.tools.issues",
    "maverick.tools.github.tools.prs",
]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# maverick.init.detector uses a top-level try/except ImportError to fall back
# to _sdk_stubs when claude_agent_sdk is absent. While the SDK remains installed
# in the dev environment, mypy analyses both branches and raises [assignment] /
# [misc] on the stub fallbacks. These are harmless because the fallback branch
# only executes when the SDK is uninstalled (ACP migration T051).
module = "maverick.init.detector"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--timeout=30",
]
markers = [
    "slow: marks tests as slow (>5s execution time)",
    "integration: marks tests requiring external services",
    "benchmark: marks performance benchmark tests",
]
timeout = 30  # 30-second default timeout for async tests (FR-026)

[tool.coverage.run]
source = ["src/maverick"]
core = "sysmon"
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
